fixed archive items alignment

--- a/tigerfunk/home/static/home/css/style.css
+++ b/tigerfunk/home/static/home/css/style.css
@@ -193,6 +193,7 @@ article ul {
 .archives {
   display: flex;
   flex-flow: column wrap;
+  align-content: flex-start;
   column-gap: 8px;
   row-gap: 8px;
   padding-left: 0;
